# boardsmith

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
compiler/: .gitignore  README.md  pyproject.toml
compiler/boardsmith_fw/: __init__.py  cli.py  config.py
compiler/boardsmith_fw/analysis/: analysis_report.py  conflict_detector.py  constraint_report.py  constraint_solver.py  graph_builder.py  hir_builder.py  timing_engine.py
compiler/boardsmith_fw/codegen/: ci_templates.py  docker_build.py  fingerprint.py  firmware_validator.py  hil_simulation.py  hir_codegen.py  intent_codegen.py  llm_wrapper.py  ota_codegen.py  platformio.py  rtos_generator.py  safety_codegen.py  topology_codegen.py  vscode_extension.py
compiler/boardsmith_fw/commands/: analyze.py  build.py  flash.py  generate.py  import_cmd.py  research.py  verify.py
compiler/boardsmith_fw/knowledge/: builtin_db.py  extractor.py  prompts.py  resolver.py
compiler/boardsmith_fw/models/: board_schema.py  component_knowledge.py  hardware_graph.py  hir.py  intent_schema.py  topology.py
compiler/boardsmith_fw/parser/: board_schema_parser.py  eagle_parser.py  kicad_parser.py  netlist_parser.py
compiler/boardsmith_fw/research/: datasheet_pipeline.py
compiler/fixtures/board_schema_esp32/: board.yaml  intent.yaml
compiler/fixtures/esp32_bme280_i2c/: README.md  esp32_bme280.sch
compiler/fixtures/esp32_multi_bus/: esp32_multi_bus.sch
compiler/fixtures/kicad_bme280_i2c/: esp32_bme280.kicad_sch
compiler/fixtures/rp2040_bme280_i2c/: rp2040_bme280.sch
compiler/fixtures/stm32f4_bme280_i2c/: stm32f4_bme280.sch
compiler/fixtures/topology_gateway_sensor/: topology.yaml
compiler/tests/: test_board_schema.py  test_ci_templates.py  test_conflicts.py  test_constraint_report.py  test_constraint_solver_ext.py  test_eagle_parser.py  test_extractor.py  test_fingerprint.py  test_flash.py  test_graph_builder.py  test_hir.py  test_hir_codegen.py  test_integration.py  test_intent_codegen.py  test_kicad_parser.py  test_knowledge.py  test_knowledge_db.py  test_ota_codegen.py  test_phase5_6_7.py  test_phase7.py  test_platformio.py  test_rp2040.py  test_rtos.py  test_safety_codegen.py  test_timing.py  test_topology_codegen.py
synthesizer/: pyproject.toml
synthesizer/boardsmith_hw/: autorouter.py  bom_builder.py  component_selector.py  confidence_engine.py  constraint_refiner.py  design_improver.py  footprint_mapper.py  gerber_validator.py  hir_composer.py  intent_parser.py  jlcpcb_drc.py  jlcpcb_validator.py  kicad_drc.py  kicad_exporter.py  manufacturing_exporter.py  pcb_design_rules.py  pcb_drc_autofix.py  pcb_layout_engine.py  pcb_pipeline.py  pcb_production.py  peripheral_patterns.py  power_budget.py  profile_checks.py  requirements_normalizer.py  schematic_erc.py  schematic_exporter.py  schematic_reviewer.py  synthesizer.py  topology_synthesizer.py
synthesizer/boardsmith_hw/agent/: __init__.py  erc_agent.py  read_schematic.py  run_erc.py  search_component.py  semantic_agent.py  verify_bom.py  verify_bootability.py  verify_components.py  verify_connectivity.py  verify_pcb_basic.py  verify_power.py  write_schematic.py
synthesizer/docs/: boardsmith_hw_spec.md  components.md
synthesizer/fixtures/: hardware_graph_esp32_bme280.json
synthesizer/fixtures/boardsmith_hw/: bom_expected_esp32_bme280.json  hir_invalid_i2c_addr_conflict.json  hir_invalid_voltage_mismatch.json  hir_valid_esp32_bme280.json  prompt_bme280_esp32.json
synthesizer/synth_core/: cli.py
synthesizer/synth_core/api/: compiler.py
synthesizer/synth_core/hir_bridge/: codegen.py  (+4 more)
synthesizer/tests/: test_07_01_gateway_tool_use.py  test_agent_read_schematic.py  test_agent_run_erc.py  test_agent_search_component.py  test_cli_e2e.py  test_component_selector.py  test_confidence_engine.py  test_constraint_refiner.py  test_hir_models.py  test_hir_snapshot.py  test_integration.py  test_intent_parser.py  test_iterative_orchestrator.py  test_jlcpcb_drc.py  test_kicad_drc.py  test_kicad_exporter.py  test_kicad_parser.py  test_knowledge_agent_tools.py  test_manufacturing_exporter.py  test_no_llm.py  test_pcb_pipeline.py  test_pcb_production.py  test_peripheral_patterns.py  test_phase12.py  test_power_budget.py  test_registry_eda_tools.py  test_schematic_erc.py  test_schematic_reviewer.py  test_topology_synthesizer.py  test_validator.py
synthesizer/tools/: kicad_library.py  validate_footprints.py  validate_symbol_map.py
(+323 files in other folders)
