[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boardsmith"
version = "0.2.0"
description = "Boardsmith — Prompt to Hardware: text prompt → schematic + firmware"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
keywords = ["firmware", "schematic", "esp32", "stm32", "rp2040", "kicad", "hardware", "ai", "embedded"]
authors = [
    { name = "Marcus Rub", email = "marcusrub@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    # Shared / core
    "pydantic>=2.7.0",
    # Synthesizer (Track B)
    "click>=8.0",
    "rich>=13.0",
    "jsonschema>=4.0",
    # Compiler (Track A)
    "typer[all]>=0.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/ForestHubAI/boardsmith"
Repository = "https://github.com/ForestHubAI/boardsmith"
"Bug Tracker" = "https://github.com/ForestHubAI/boardsmith/issues"
Changelog = "https://github.com/ForestHubAI/boardsmith/blob/main/CHANGELOG.md"

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "pdfplumber>=0.11.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
boardsmith = "boardsmith_cli.main:cli"

[tool.hatch.build.targets.sdist]
exclude = [
    ".venv*/",
    "venv*/",
    ".venv/",
    "venv/",
    "__pycache__/",
    "dist/",
    "*.egg-info/",
    ".pytest_cache/",
    ".mypy_cache/",
    ".ruff_cache/",
    "shared/knowledge/*.db",
    "shared/knowledge/*.db-shm",
    "shared/knowledge/*.db-wal",
]

[tool.hatch.build.targets.wheel]
packages = [
    "boardsmith_cli",
    "shared",
    "synthesizer/synth_core",
    "synthesizer/boardsmith_hw",
    "compiler/boardsmith_fw",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "synthesizer", "shared", "compiler", "cli"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
