[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synth-core"
version = "0.7.0"
description = "Boardsmith synthesizer: Prompt → HIR → KiCad schematic + PCB"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "jsonschema>=4.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
# Phase 15: renamed boardsmith_fw → synth_core (resolves namespace collision with compiler/boardsmith_fw)
synth-core = "synth_core.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["synth_core", "boardsmith_hw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
